--- a/index.html
+++ b/index.html
@@ -43,3 +43,21 @@
 
     <img src="beneficios.jpg" class="imagembeneficios">
 </div>
+
+<header>
+    <h1 class="titulo-principal">Barbearia Alura</h1>
+</header>
+
+<h2 class="titulo-centralizado">Sobre a Barbearia Alura</h2>
+
+<h3 class="titulo-centralizado">Benefícios</h3>
+
+
+
+
+
+
+
+
+
+
